<resources>
    <string name="app_name">GrinApp</string>
    <string name="address_">Address:</string>
    <string name="name_">Name:</string>
    <string name="intensity_">Strength:</string>
    <string name="date_">Creation date:</string>
    <string name="save">Save</string>

    <string name="action_share">Share</string>
    <string name="action_see_github">See Github</string>
    <string name="action_see_linkedin">See LinkedIn</string>
    <string name="action_sort_name">Sort by name</string>
    <string name="action_sort_strength">Sort by strength</string>
    <string name="action_sort_date">Sort by date</string>
    <string name="action_sort_address">Sort by address</string>

    <string name="url_linkedin">https:www.linkedin.com/in/agm91</string>
    <string name="url_github">https:www.github.com/agm91</string>

    <string name="text_share">See this great dev!\nLinkedIn: https:www.linkedin.com/in/agm91\nGithub: https:www.github.com/agm91</string>
    <string name="upload_successfull">The upload was successful.</string>
    <string name="upload_unsuccessfull">The upload failed.</string>

    <string name="saved_devices">Saved devices</string>
    <string name="error">There was an error. Please, try again later.</string>
</resources>
