<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort_name"
        android:orderInCategory="100"
        android:title="@string/action_sort_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_strength"
        android:orderInCategory="100"
        android:title="@string/action_sort_strength"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_address"
        android:orderInCategory="100"
        android:title="@string/action_sort_address"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_date"
        android:orderInCategory="100"
        android:title="@string/action_sort_date"
        app:showAsAction="never" />
</menu>
